2011-02-21  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: navigation does not work after reopening frontend.
        https://bugs.webkit.org/show_bug.cgi?id=54879

        Test: http/tests/inspector-enabled/open-close-open.html

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::setFrontend):
        * inspector/InspectorState.cpp:
        (WebCore::InspectorState::unmute):
        * inspector/InspectorState.h:


Canonical link: https://commits.webkit.org/69161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79234 268f45cc-cd09-0410-ab3c-d52691b4dbfc